acrescentando efeito houve input

--- a/desafio-form/index.html
+++ b/desafio-form/index.html
@@ -19,9 +19,12 @@
                             A
                         </span>
                     </div>
+                    
                     <div>
                         <input type="email" placeholder="Email">
+                        <div class="efeito-preenchimento"></div>
                     </div>
+                    
                     <div>
                         <input type="password" placeholder="Password"> </br>
                     </div>
